# 2-link-planar-arm

./: CMakeLists.txt  README.md  animate_pd_control.py
include/: 2_link.hpp  collision_checker.hpp  controller.hpp  joint_trayectory.hpp  planar_2link_dynamics.hpp  planar_2link_kinematics.hpp
scripts/: animate_pd_control.py
src/: 2_link.cpp  collision_checker.cpp  controller.cpp  joint_trayectory.cpp  main.cpp  planar_2link_dynamics.cpp  planar_2link_kinematics.cpp
